--- a/res/style.css
+++ b/res/style.css
@@ -1,30 +1,1 @@
-.App {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    height:100%;
-}
-
-td {
-    vertical-align: top;
-}
-
-nav {
-    display: table-cell;
-    background: #eee;
-    width: 300px;
-}
-
-.selected {
-    background:#000;
-    color:#fff;
-}
-
-form {
-    display: table-cell;
-    background:#ccc;
-}
-
-
-td {
-    border: 1px solid black
-}
+*{-webkit-user-select:none;-webkit-user-drag:none;font-family:Helvetica, sans-serif;text-shadow:0px 1px #fff}input{-webkit-user-select:auto}body{margin:0;display:-webkit-box;-webkit-box-pack:justify;-webkit-box-align:stretch}table{border-collapse:collapse}table td{vertical-align:top;border:1px solid black;padding:1em}table .a{background:-webkit-linear-gradient(#eee, #ccc)}table .b{background:#aaa;max-width:200px;min-width:200px;width:300px}.selected{background:#000;color:#fff}form{display:table-cell;background:#ccc}
